# avc

./: .gitignore  initiator_run.py  main.py  pyproject.toml  shell.bat
avc/: avc_pay_robot.py  logger.py  models.py  pdf_parser.py  pyrus_client.py  pyrus_selenium.py  utils.py
avc/my_types/: misc.py
avc/types/: misc.py  payload.py
